--- a/1-team-website/index.html
+++ b/1-team-website/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <title>Hanover Hawks!</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
 
     <body>
-        <i><a href="media.html">Media</a></i>
+        <i><a class = "button" href="media.html">Media</a></i>
         <i><a href="roster.html">Roster</a></i>
         <i><a href="schedule.html">Schedule</a></i>
-
+        <div></div>
         <p>
         This is the website for the Hanover
         Hawks Esports team. Above are buttons to
