--- a/1-team-website/schedule.html
+++ b/1-team-website/schedule.html
@@ -2,6 +2,7 @@
 <html lang ="en">
     <head>
         <title>Hanover Hawks!</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <i><a href="index.html">Home</a></i>
