some more stuff

--- a/1-team-website/media.html
+++ b/1-team-website/media.html
@@ -3,18 +3,18 @@
     <head>
         <meta name ="viewport" content="width=device-width, initial scale=1.0">
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <title>Hanover Hawks!</title>
+        <title>Esports Media</title>
     </head>
     <body>
-        <i><a href="index.html">Home</a></i>
-        <i><a href="roster.html">Roster</a></i>
-        <i><a href="schedule.html">Schedule</a></i>
+        <i><a class = "button" href="index.html">Home</a></i>
+        <i><a class = "button" href="roster.html">Roster</a></i>
+        <i><a class = "button" href="schedule.html">Schedule</a></i>
         <a href="https://twitter.com/HHSesportss">Twitter</a>
 
-        <h2>Oldest Recorded Smash Gameplay</h2>
-        <iframe src="https://www.youtube.com/embed/ZW-CbuBqIgY"></iframe>
+        <h5>Oldest Recorded Smash Gameplay</h5>
+        <iframe width = "400px" height = "200px" src="https://www.youtube.com/embed/ZW-CbuBqIgY"></iframe>
 
-        <h2>Most Recent Recorded Smash Gameplay</h2>
-        <iframe src="https://www.youtube.com/embed/Q1t98A6fvQo"></iframe>
+        <h5>Most Recent Recorded Smash Gameplay</h5>
+        <iframe width = "400px" height = "200px" src="https://www.youtube.com/embed/Q1t98A6fvQo"></iframe>
     </body>
 </html>
