--- a/1-team-website/roster.html
+++ b/1-team-website/roster.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang ="en">
     <head>
-        <title>Hanover Hawks!</title>
+        <title>Esports Roster</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <i><a href="index.html">Home</a></i>
-        <i><a href="media.html">Media</a></i>
-        <i><a href="schedule.html">Schedule</a></i>
+        <i><a class = "button" href="index.html">Home</a></i>
+        <i><a class = "button" href="media.html">Media</a></i>
+        <i><a class = "button" href="schedule.html">Schedule</a></i>
 
         <h1>Esports Members</h1>
         <table border ="1">
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <td>9</td>
-                <td colspan ="6">Noah Beliveau</td>
+                <td colspan ="6" rowspan ="1">Noah Beliveau</td>
             </tr>
             <tr>
                 <td>10</td>
