--- a/1-team-website/schedule.html
+++ b/1-team-website/schedule.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang ="en">
     <head>
-        <title>Hanover Hawks!</title>
+        <title>Esports Schedule</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <i><a href="index.html">Home</a></i>
-        <i><a href="media.html">Media</a></i>
-        <i><a href="roster.html">Roster</a></i>
+        <i><a class = "button" href="index.html">Home</a></i>
+        <i><a class = "button" href="media.html">Media</a></i>
+        <i><a class = "button" href="roster.html">Roster</a></i>
         <h1>September</h1>
         <table border="1">
             <caption>Important Dates</caption>
