--- a/1-team-website/index.html
+++ b/1-team-website/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hanover Hawks!</title>
+        <title>Hanover Hawks Home Page</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
 
     <body>
         <i><a class = "button" href="media.html">Media</a></i>
-        <i><a href="roster.html">Roster</a></i>
-        <i><a href="schedule.html">Schedule</a></i>
+        <i><a class = "button" href="roster.html">Roster</a></i>
+        <i><a class = "button" href="schedule.html">Schedule</a></i>
         <div></div>
         <p>
         This is the website for the Hanover
