2nd to last Updates

--- a/1-team-website/media.html
+++ b/1-team-website/media.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-<html lang ="en">
+<html lang="en">
     <head>
-        <meta name ="viewport" content="width=device-width, initial scale=1.0">
         <link rel="stylesheet" type="text/css" href="styles.css">
         <title>Esports Media</title>
     </head>
-    <body>
-        <i><a class = "button" href="index.html">Home</a></i>
-        <i><a class = "button" href="roster.html">Roster</a></i>
-        <i><a class = "button" href="schedule.html">Schedule</a></i>
-        <a href="https://twitter.com/HHSesportss">Twitter</a>
 
+    <body>
+        <i><a class="button" href="index.html">Home</a></i>
+        <i><a class="button" href="roster.html">Roster</a></i>
+        <i><a class="button" href="schedule.html">Schedule</a></i>
+        
+        <h1>Social Links</h1>
+
+        <div class="socaialDiv">
+            <a class="button" class="social-link" href="https://twitter.com/HHSesportss">Twitter</a>
+            <p>a</p>
+            <a class="button" class="social-link" href="https://www.tiktok.com/@hhsesports">TikTok</a>
+            <p></p></p>
+            <a class="button" class="socail-link" href="https://twitter.com/HHSesportss">Instagram</a>
+
+        </div>
+        
         <h5>Oldest Recorded Smash Gameplay</h5>
         <iframe width = "400px" height = "200px" src="https://www.youtube.com/embed/ZW-CbuBqIgY"></iframe>
 
