--- a/1-team-website/schedule.html
+++ b/1-team-website/schedule.html
@@ -36,7 +36,7 @@
                 <td>06</td>
                 <td>07</td>
                 <td>08</td>
-                <td>09</td>
+                <td>09<span class="inside">hello</span></td>
             </tr>
             <tr>
                 <td>10</td>
@@ -52,7 +52,7 @@
                 <td>18</td>
                 <td>19</td>
                 <td>20</td>
-                <td>21</td>
+                <td colspan = "2">21Fortnite Practice, Club Meetings Begin</td>
                 <td>22</td>
                 <td>23</td>
             </tr>
@@ -61,7 +61,7 @@
                 <td>25</td>
                 <td>26</td>
                 <td>27</td>
-                <td>28</td>
+                <td>28 Fortnite Match</td>
                 <td>29</td>
                 <td>30</td>
             </tr>
