--- a/1-team-website/schedule.html
+++ b/1-team-website/schedule.html
@@ -36,7 +36,7 @@
                 <td>06</td>
                 <td>07</td>
                 <td>08</td>
-                <td>09<span class="inside">hello</span></td>
+                <td>09</td>
             </tr>
             <tr>
                 <td>10</td>
@@ -52,7 +52,7 @@
                 <td>18</td>
                 <td>19</td>
                 <td>20</td>
-                <td colspan = "2">21Fortnite Practice, Club Meetings Begin</td>
+                <td>21Fortnite Practice, Club Meetings Begin</td>
                 <td>22</td>
                 <td>23</td>
             </tr>
