--- a/1-team-website/index.html
+++ b/1-team-website/index.html
@@ -11,10 +11,8 @@
         <i><a class = "button" href="schedule.html">Schedule</a></i>
         <div></div>
         <p>
-        This is the website for the Hanover
-        Hawks Esports team. Above are buttons to
-        navigate to other pages, underneath is links
-        to Hanover Hawks profiles on other websites
+        The Hanover Hawks Esports team is the Esports Team for Hanover High. 
+        Above this there are buttons to navigate to other pages.
         </p>
     </body>
 </html>
