--- a/forms/jquery.html
+++ b/forms/jquery.html
@@ -40,9 +40,9 @@
             Use the input fields below to convert temperatures between Celsius and Fahrenheit.
         </p>
 
-        <input type="text" id="celsius" placeholder="Enter a value" onchange="calculateFahrenheit(this.value)" /> &#176;C
+        <input type="text" id="celsius" placeholder="Enter a value" onchange="calculateFahrenheit(this.value)" />
         <br />
-        <input type="text" id="fahrenheit" placeholder="Enter a value" onchange="calculateCelsius(this.value)" /> &#176;F
+        <input type="text" id="fahrenheit" placeholder="Enter a value" onchange="calculateCelsius(this.value)" />
 
         <hr>
 
