--- a/svg/svg2school.html
+++ b/svg/svg2school.html
@@ -24,7 +24,7 @@
             <text x="300" y="300" fill="red" transform="rotate(45 300,300)">Hello World</text>
         </svg>
     
-        <svg width="500" height="500" style="background-color:white;">
+        <svg width="500" height="500" style="background-color:black;">
             <circle cx="250" cy="250" r="150" stroke="#000000" stroke-width="5" fill="#ffa500" />
             <rect width="50" height="75" x="225" y="25" fill="brown" />
             <polygon points="160,225 190,160, 220,225"
@@ -46,6 +46,7 @@
             style="fill:orange;" />
             <polygon points="275,270 300,312, 325,270"
             style="fill:orange;" />
+            <text x="200" y="400">Hello World</text>
         </svg>
     </body>
 
