--- a/svg/svg1.html
+++ b/svg/svg1.html
@@ -7,5 +7,8 @@
   <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
 </svg>
 
+<h1>Cube SVG</h1>
+
+<svg></svg>
 </body>
 </html
