--- a/svg/svg2.html
+++ b/svg/svg2.html
@@ -23,11 +23,14 @@
             <!-- This is the same text but colored red and rotated 50 degrees-->
             <text x="300" y="300" fill="red" transform="rotate(45 300,300)">Hello World</text>
         </svg>
-    
+        <br>
+        <h1>Happy Halloween me</h1>
         <svg width="500" height="500" style="background-color:white;">
-            <circle cx="250" cy="250" r="100" stroke="#000000" stroke-width="5" fill="#ffa500" />
-            <polygon points="200,225 200,180, 200,225"
-            style="fill:yellow;" />
+            <circle cx="250" cy="250" r="125" stroke="#000000" stroke-width="5" fill="#ffa500" />
+            <polygon points="175,225 200,180, 225,225"
+            style="fill:yellow;stroke:black;stroke-width:5;" />
+            <polygon points="325,225 300,180, 275,225"
+            style="fill:yellow;stroke:black;stroke-width:5;" />
         </svg>
     </body>
 
