--- a/craps/index.html
+++ b/craps/index.html
@@ -51,7 +51,14 @@
 
         </svg>
 
+    <div id="controls">
+        Winnings: <span id="winnings">$50</span>
+        <span class="spacer"></span>
+        Bet: <input type="text" id="bet" name="bet" size="5" />
+        <span class="spacer"></span>
         <input type="button" value="Roll Die" onclick="rollDice()"/>
+    </div>
+        
     </body>
 
 
