--- a/3-game/index.html
+++ b/3-game/index.html
@@ -20,10 +20,10 @@
 
             <!--Cannon-->
             <rect id="barrel" width="25" height="50" x="107" y="90%" style="fill:white" />
-            <circle id="roundabout" r="25"  cx="118.4" cy="98%" />
+            <circle id="roundabout" r="25"  cx="118.4" cy="686" />
 
             <!--Ball-->
-            <circle id="ball" r="20"  cx="118.4" cy="560" style="fill:white" />
+            <circle id="ball" r="15"  cx="118.4" cy="686" style="fill:white" />
 
             <!--Title Screen-->
             <g id="mainmenu">
