--- a/3-game/index.html
+++ b/3-game/index.html
@@ -15,8 +15,10 @@
                 <rect width="2.75%" height="2.75%" style="fill:white"/>
             </symbol>
 
-            <!--Point-->
+
+            <!--Point
             <text id="point" x="500" y="500" >Point: 100</text>
+            -->
 
             <!--Cannon-->
             <rect id="barrel" width="25" height="50" x="107" y="90%" style="fill:white" />
@@ -45,9 +47,9 @@
                 <text class="subcatut" x="15" y="90" >---------</text>
                 <text class="subtut" x="10" y="110" >Aim Cannon: AD or &#8592;&#8594;</text>
                 <text class="subtut" x="10" y="130" >Fire Cannon: SPACE</text>
-                <text class="subtut" x="" y="" ></text>
-
-
+                <text class="subcatut" x="10" y="155" >Goal</text>
+                <text class="subcatut" x="10" y="165" >------</text>
+                <text class="subtut" x="10" y="180" >Destroy Bricks For Points</text>
             
                 
             </g>
