--- a/11-final-project/web/midnight.html
+++ b/11-final-project/web/midnight.html
@@ -1,44 +1,22 @@
 <!DOCTYPE html>
-<title>Midnight Moonlight</title>
+<title>Midnight Moonlight: Title </title>
 <html>
 <head>
-    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-    <script src="midnight.js"></script>
     <link rel="stylesheet" href="midnight.css">
 </head>
-    <body>
-        <svg id="Shapes" viewBox="0 0 1000 500">
+    <body> 
+        <svg id="Title" viewBox="0 0 1000 500">
             <defs>
-                <linearGradient id="grad1" x1="0%" x2="100%" y1="0%" y2="0%">
+                <linearGradient id="darker" x1="0%" x2="100%" y1="0%" y2="0%">
                   <stop offset="0%" stop-color="dimgray" />
                   <stop offset="100%" stop-color="white" />
                 </linearGradient>
               </defs>
-            <g id="titlescreen">
-                <polygon points="150,15 258,77 258,202 150,265 42,202 42,77" onclick="start()"/><!--"Moon"-->
-            <!--Title-->
-                <text x="280" y="170" fill="url(#grad1)" font-size="80">Midnight</text>
-                <text x="250" y="270" fill="url(#grad1)" font-size="80">Moonlight</text>
-         
-            </g>
-            
-            <g id="hallway"> <!--Hallway, After main room-->
-                <rect fill="black" stroke="white" stroke-width="5" width="1100" height="60" x="-10" y="338"></rect> <!--Hallway itself (middle and bottom line)-->
-                <line x1="0" x2="100%" y1="190" y2="190" stroke="white" stroke-width="5"></line>
-                <rect fill="white" stroke="gray" stroke-width="5" width="50" height="70" x="50%" y="215">/> <!--Window-->
-
-            </g>
-            <!--Character-->
-            <g id="player">
-                <circle cx="300" cy="240" r="15" fill="white" stroke="black" stroke-width="5"></circle> <!--Head-->
-                <rect fill="white" width="20" height="75" x="291" y="257" rx="5" ry="5"></rect> <!--Body, All body parts should swing when walking-->
-                <rect fill="white" width="20" height="50" x="312" y="340" rx="5" ry="5"></rect> <!--LegFront-->
-                <rect fill="white" width="20" height="50" x="270" y="340" rx="5" ry="5"></rect> <!--LegBack-->
-                <rect fill="white" width="20" height="65" x="312" y="260" rx="5" ry="5"></rect> <!--ArmFront-->
-                <rect fill="white" width="20" height="65" x="270" y="260" rx="5" ry="5"></rect> <!--ArmBack-->
-            </g>
-            <!--Moonlight Spot, make varients later on!-->
-            <rect class="moonlit" fill="white" width="50" height="55" x="50%" y="69%">/>
+            <a href="hotel.html"> <polygon points="150,15 258,77 258,202 150,265 42,202 42,77" /> </a>
+            <text x="280" y="170" fill="url(#darker)" font-size="80">Midnight</text>
+            <text x="250" y="270" fill="url(#darker)" font-size="80" >Moonlight</text>
+            <!--Rays ( Heavy work in progress, make moonrays go across screen and invert text color )-->
+            <rect fill="white" stroke="white" stroke-width="0" width="50" height="100%" x="76%" y="0">/>
         </svg>
     </body>
 </html>
