Folders and Files

--- a/11-final-project/web/midnight.html
+++ b/11-final-project/web/midnight.html
@@ -11,10 +11,14 @@
                   <stop offset="0%" stop-color="dimgray" />
                   <stop offset="100%" stop-color="white" />
                 </linearGradient>
+                <linearGradient id="lighter" x1="0%" x2="100%" y1="0%" y2="0%">
+                    <stop offset="0%" stop-color="white" />
+                    <stop offset="100%" stop-color="dimgray" />
+                  </linearGradient>
               </defs>
             <a href="hotel.html"> <polygon points="150,15 258,77 258,202 150,265 42,202 42,77" /> </a>
             <text x="280" y="170" fill="url(#darker)" font-size="80">Midnight</text>
-            <text x="250" y="270" fill="url(#darker)" font-size="80" >Moonlight</text>
+            <text x="250" y="270" fill="url(#lighter)" font-size="80" >Moonlight</text>
             <!--Rays ( Heavy work in progress, make moonrays go across screen and invert text color )-->
             <rect fill="white" stroke="white" stroke-width="0" width="50" height="100%" x="76%" y="0">/>
         </svg>
