--- a/11-final-project/web/hotel.html
+++ b/11-final-project/web/hotel.html
@@ -21,8 +21,8 @@
             
 
             <!--Character, try to link from a different file alongside srcs-->
-            <g>
-                <circle id="player" cx="300" cy="240" r="15" fill="white" stroke="black" stroke-width="5"></circle> <!--Head-->
+            <g id="player">
+                <circle cx="300" cy="240" r="15" fill="white" stroke="black" stroke-width="5"></circle> <!--Head-->
                 <rect fill="white" width="20" height="75" x="291" y="257" rx="5" ry="5"></rect> <!--Body, All body parts should swing when walking-->
                 <rect fill="white" width="20" height="50" x="312" y="340" rx="5" ry="5"></rect> <!--LegFront-->
                 <rect fill="white" width="20" height="50" x="270" y="340" rx="5" ry="5"></rect> <!--LegBack-->
