filedone and midnight title work

--- a/11-final-project/web/midnight.html
+++ b/11-final-project/web/midnight.html
@@ -20,6 +20,8 @@
             <text x="280" y="170" fill="url(#darker)" font-size="80">Midnight</text>
             <text x="250" y="270" fill="url(#lighter)" font-size="80" >Moonlight</text>
             <!--Rays ( Heavy work in progress, make moonrays go across screen and invert text color )-->
+            <!--Make ray go in back, also change styling in css needs to be white-->
+            <polygon points="700,0 900,0 200,500 50,500" fill="white"></polygon>
             <rect fill="white" stroke="white" stroke-width="0" width="50" height="100%" x="76%" y="0">/>
         </svg>
     </body>
