--- a/11-final-project/web/midnight.html
+++ b/11-final-project/web/midnight.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="midnight.css">
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
-    <script src="midnight.js"></script>
+    <!--<script src="midnight.js"></script>-->
 </head>
     <body> 
         <svg id="Title" viewBox="0 0 1000 500">
@@ -42,15 +42,15 @@
             <!--Buttons--> 
 
             <a href="hotel.html">
-            <text id="startText" x="75" y="380" fill="url(#lighter)" font-size="75" >Start</text>
-            <rect id="startBox" x="75" y="300" width="250" height="100" stroke="white" stroke-width="3" rx="5" ry="5"></rect>
+            <text class="MenuText" x="100" y="375" font-size="75" >Start</text>
+            <rect id="startBox" x="50" y="300" width="250" height="100" stroke="white" stroke-width="3" rx="5" ry="5"></rect>
             </a>
 
-            <text id="loadText" x="380" y="380" fill="url(#lighter)" font-size="75" >Load</text>
-            <rect id="loadBox" x="375" y="300" width="250" height="100" fill="black" stroke="white" stroke-width="3" rx="5" ry="5"></rect>
+            <text class="MenuText" x="390" y="375" font-size="75" >Load</text>
+            <rect id="loadBox" x="350" y="300" width="250" height="100" fill="black" stroke="white" stroke-width="3" rx="5" ry="5"></rect>
             
-            <text id="optionsText" x="682" y="375" fill="url(#lighter)" font-size="75" >Options</text>
-            <rect id="optionsBox" x="675" y="300" width="250" height="100" fill="black" stroke="white" stroke-width="3" rx="5" ry="5"></rect>      
+            <text class="MenuText" x="675" y="375" font-size="75" >Options</text>
+            <rect id="optionsBox" x="650" y="300" width="290" height="100" fill="black" stroke="white" stroke-width="3" rx="5" ry="5"></rect>      
         </svg>
     </body>
 </html>
