--- a/11-final-project/web/hotel.html
+++ b/11-final-project/web/hotel.html
@@ -4,6 +4,13 @@
 <head>
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="midnight.js"></script>
+    <script>
+        $(document).ready(function() {
+            $("#player").fadeIn(100);
+            document.getElementById("Rooms").setAttribute("points", starter);
+            characterChange("Vertical");
+}); 
+    </script>
     <link rel="stylesheet" href="midnight.css">
 </head>
     <body>
