--- a/3-game/index.html
+++ b/3-game/index.html
@@ -8,7 +8,7 @@
     </head> 
 
     <body>
-        <svg width="1480" height="700" style="background-color:black;">
+        <svg id= "sky">
             <!--Brick-->
             <symbol id="brick">
                 <rect width="2.75%" height="2.75%" style="fill:white"/>
@@ -20,11 +20,11 @@
             -->
 
             <!--Cannon-->
-            <rect id="barrel" width="25" height="50" x="107" y="90%" style="fill:white" />
-            <circle id="roundabout" r="25"  cx="118.4" cy="686" />
+            <rect id="barrel" height="50" x="188" y="870" />
+            <circle class="cannon" id="roundabout" r="25"/>
 
             <!--Ball-->
-            <circle id="ball" r="15"  cx="118.4" cy="686" style="fill:white" />
+            <circle class="cannon" id="ball" r="15" style="fill:white" />
 
             <!--Title Screen-->
             <g id="mainmenu">
